--- a/public/assets/back-end/css/style.css
+++ b/public/assets/back-end/css/style.css
@@ -5760,7 +5760,7 @@ aside .navbar-vertical-content {
     max-height: 300px;
 }
 
-.valley-alert {
+.tanvirsoft-alert {
     border: 1px solid rgba(var(--c1-rgb), 0.2);
     border-left-width: 3px;
     border-left-color: var(--c1);
