--- a/public/assets/installation/assets/css/style.css
+++ b/public/assets/installation/assets/css/style.css
@@ -2,8 +2,8 @@
 	*******************
 	Template name:  Installation Process
 	Version:        1.0
-	Author:         6amtech
-	Author url:     https://6amtech.com/
+	Author:         tanvirsoft
+	Author url:     https://tanvirsoft.com/
 
 	NOTE:
 	-----
